<resources>
    <string name="app_name">HomeLibrary</string>
    <string name="add">Add</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="home_library">Home Library</string>
    <string name="book">Book</string>
    <string name="reader">Reader</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="books">Books</string>
    <string name="readers">Readers</string>
    <string name="authors_3_more_books">Authors (3+ books)</string>
    <string name="readers_3_more_readings">Readers (3+ readings)</string>
    <string name="title">Title</string>
    <string name="publisher">Publisher</string>
    <string name="publishing_date">Publishing date</string>
    <string name="price">Price</string>
    <string name="comment">Comment</string>
    <string name="shelf_number">Shelf number</string>
    <string name="add_author">Add author</string>
    <string name="add_reader">Add reader</string>
    <string name="authors_information">Authors information</string>
    <string name="readers_information">Readers information</string>
    <string name="confirm">Confirm</string>
    <string name="full_name">Full name</string>
    <string name="date_of_birth">Date of birth</string>
    <string name="author_1">Author 1</string>
    <string name="author_2">Author 2</string>
    <string name="author_3">Author 3</string>
    <string name="reader_1">Reader 1</string>
    <string name="reader_2">Reader 2</string>
    <string name="reader_3">Reader 3</string>
    <string name="reader_4">Reader 4</string>
    <string name="reader_5">Reader 5</string>
    <string name="address">Address</string>
    <string name="plus">+</string>
    <string name="contact_1">Contact 1</string>
    <string name="contact_2">Contact 2</string>
    <string name="number_of_book_readings">Number of book readings</string>
    <string name="format_date_input">Format: DD/MM/YYYY</string>
    <string name="empty">Empty</string>
    <string name="amount_of_readings">Amount of readings:</string>
    <string name="wait_for_update">Wait for update!</string>
    <string name="book_borrowings_times">Book borrowings (times):</string>
    <string name="books_amount">Books amount:</string>
    <string name="search_by_book">Search by book</string>
    <string name="namespace" />
    <string name="readings">Readings:</string>
</resources>