<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group>
        <item
            android:id="@+id/add"
            android:title="@string/add"
            android:icon="@drawable/ic_add"/>

        <item
            android:id="@+id/books"
            android:title="@string/books"
            android:icon="@drawable/ic_book"/>

        <item
            android:id="@+id/readers"
            android:title="@string/readers"
            android:icon="@drawable/ic_people"/>

        <item
            android:id="@+id/authors_3_more_books"
            android:title="@string/authors_3_more_books"
            android:icon="@drawable/ic_person"/>

        <item
            android:id="@+id/reread_3_more_times"
            android:title="@string/readers_3_more_readings"
            android:icon="@drawable/ic_clock"/>

    </group>

</menu>